--- a/.github/workflows/test2file_automation.yml
+++ b/.github/workflows/test2file_automation.yml
@@ -28,16 +28,19 @@ jobs:
     - name: Show Current Directory
       run: pwd
     - name: List Files and Directories
-      run: ls -alR #Added recursive listing
+      run: ls -alR
     - name: Check for transformation.py
       run: |
-        # Check for the existence of the directory and the file, adjust the path
-        if [ -d "taf_dec/tests/table4" ] && [ -f "taf_dec/tests/table4/transformation.py" ]; then
+        # Change to the base directory first
+        cd taf_dec
+        # Check for the existence of the directory and the file
+        if [ -d "tests/table4" ] && [ -f "tests/table4/transformation.py" ]; then
           echo "taf_dec/tests/table4 and transformation.py exist!"
         else
           echo "taf_dec/tests/table4 or transformation.py does NOT exist!"
           exit 1
         fi
+      shell: /usr/bin/bash -e
     - name: Test with pytest
       run: python runner2.py
       shell: /usr/bin/bash -e
