--- a/tests/table2/config.yml
+++ b/tests/table2/config.yml
@@ -1,5 +1,5 @@
 source:
-  path: "input_files/Contact_info.csv"
+  path: "C:\\Users\\souls\\PycharmProjects\\MyProj\\taf_dec\\input_files\\Contact_info.csv"
   type: "csv"
   schema: "Y"
   options:
@@ -8,7 +8,7 @@ source:
   exclude_cols: ["created_date", "updated_date", "hash_key", "batch_id"]
 
 target:
-  path: "input_files/Contact_info.csv"
+  path: "C:\\Users\\souls\\PycharmProjects\\MyProj\\taf_dec\\input_files\\Contact_info.csv"
   type: "csv"
   schema: "Y"
   options:
@@ -24,7 +24,7 @@ validations:
   null_check:
     null_columns: ["Identifier", "Email"]
   uniqueness_check:
-    unique_columns: ["Identifier", "Email"]
+    unique_columns: ["Identifier"]
   data_compare_check:
     key_column: ["Identifier"]
     num_records: 100
