--- a/tests/customer_scd2/config.yml
+++ b/tests/customer_scd2/config.yml
@@ -1,14 +1,14 @@
 source:
   type: "database"
-  transformation: ["Y","python"]
-  table: "customer_silver_scd2_expected"
+  transformation: ["y","python"]
+  table: "customers_silver_scd2_expected"
   cred_lookup: "sqlserver"
   exclude_cols: ["created_date","updated_date","batch_id",'start_date','end_date']
 
 target:
   type: "database"
   transformation : ["N","N"]
-  table: "customer_silver_scd2"
+  table: "customers_silver_scd2"
   cred_lookup: "sqlserver"
   exclude_cols: ["created_date","updated_date","batch_id",'start_date','end_date']
 
@@ -16,10 +16,11 @@ validations:
   count_check:
     key_columns: ["customer_id"]
   duplicate_check:
-    key_columns: ["customer_id"]
+    key_columns: ["customer_id","batchid","history_flag"]
   null_check:
     null_columns: ["customer_id","name","email"]
-  uniqueness_check:
-    unique_columns: ["customer_id","hash_key"]
+  #uniqueness_check:
+    #unique_columns: ["customer_id"]
   data_compare_check:
-    key_column: ["customer_id","hash_key"]
+    key_column: ["customer_id","history_flag"]
+    num_records: 5
