--- a/tests/customers_table/file2customer_raw/config.yml
+++ b/tests/customers_table/file2customer_raw/config.yml
@@ -16,14 +16,14 @@ target:
 
 validations:
   count_check:
-    key_columns: ["customer_id"]
+    key_columns: ["customer_id","name","email","batchid","phone"]
   duplicate_check:
-    key_columns: ["customer_id"]
+    key_columns: ["customer_id","name","email","batchid","phone"]
   null_check:
-    null_columns: ["customer_id","name", "email", "phone"]
+    null_columns: ["customer_id","name", "email", "batchid"]
   uniqueness_check:
     unique_columns: ["customer_id"]
   data_compare_check:
-    key_column: ["customer_id"]
+    key_column: ["customer_id","name","email","batchid","phone"]
     validate_columns: ["na"]
     num_records: 100
