--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -29,4 +29,4 @@ jobs:
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with pytest
-      run: python runner2.py
+      run: python test_dummy.py
